samples/_failures_safe/1761522747_2affb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e87868a9.c: In function ‘main’:
./samples/SAFE/__tmp_e87868a9.c:165:12: error: missing terminating " character
  165 |     printf("Final
      |            ^~~~~~
./samples/SAFE/__tmp_e87868a9.c:165:5: error: expected expression at end of input
  165 |     printf("Final
      |     ^~~~~~
./samples/SAFE/__tmp_e87868a9.c:165:5: error: expected declaration or statement at end of input
